[package]
name = "aoc"
version = "0.1.0"
authors = ["Clément Brisset <aoc@brisset.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.25"
automod = "1.0.14"
# termion = "1.5.6"
num_enum = "0.7.3"
inventory = "0.3.15"
euclid = "0.22.11"
memoize = "0.4.2"
itertools = "0.13.0"
num = "0.4.3"
lazy_static = "1.5.0"
regex = "1.11.1"
rand = "0.8.5"
